adds max-width page, no JS

--- a/index.html
+++ b/index.html
@@ -14,32 +14,36 @@
 
 		</div>
 
-		<div class="body">
+		<div class="main">
 			<div id="figureOne">
-				<figure>
+				<figure class="fig1">
 					<img src="image/cr2-amsterdam.jpg">
-					<figcaption id="figCOne"></figcaption>
+					<figcaption id="figCOne">Amsterdam 1189<br>Netherlands Average price</figcaption>
 				</figure>
 
 
 			</div>
 
 			<div id="figureTwo">
-				<figure>
+				<figure class="fig2">
 					<img src="image/cr2-london.jpg">
-					<figcaption id="figCTwo"></figcaption>
+					<figcaption id="figCTwo">London 2360<br>United Kingdom average price</figcaption>
 				</figure>
-
-
 			</div>
-			<div class="figureTwo"></div>
-
-
-
-
-
+			<div class="text">
+				<p id="paragraph">Amsterdam will be more affordable than london for the New Year's celebration.
+				</p>
+			</div>
 
 		</div>
+			
+
+
+
+
+
+
 	</div>
+	
 </body>
 </html>
