adds some shadow styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="main">
 			<div id="figureOne">
 				<figure class="fig1">
-					<img src="image/cr2-amsterdam.jpg">
+					<img src="image/cr2-amsterdam.jpg" alt="amsterdam">
 					<figcaption id="figCOne">
 						<table>
 							<tr>
@@ -39,7 +39,7 @@
 
 			<div id="figureTwo">
 				<figure class="fig2">
-					<img src="image/cr2-london.jpg">
+					<img src="image/cr2-london.jpg" alt="london">
 					<figcaption id="figCTwo"><div><table>
 					<tr>
 						<td id="name2">London</td>
