--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<div class="header">
 			<img id="logo" src="image/cr2-logo.png" alt="logo picture">
 			<h2>Price comparison</h2>
-
 		</div>
 
 		<div class="main">
@@ -33,25 +32,26 @@
 						</table>
 					</figcaption>
 				</figure>
-
-
 			</div>
 
 			<div id="figureTwo">
 				<figure class="fig2">
 					<img src="image/cr2-london.jpg" alt="london">
-					<figcaption id="figCTwo"><div><table>
-					<tr>
-						<td id="name2">London</td>
-						<td id="avgPrice2td"><span id="avgPrice2"></td>
-					</tr>
-					<tr>
-						<td id="country2">United Kingdom</td>
-						<td class="avgRight">average price</td>
-					</tr>
-				</table></figcaption>
+					<figcaption id="figCTwo">
+						<table>
+							<tr>
+								<td id="name2">London</td>
+								<td id="avgPrice2td"><span id="avgPrice2"></td>
+							</tr>
+							<tr>
+								<td id="country2">United Kingdom</td>
+								<td class="avgRight">average price</td>
+							</tr>
+						</table>
+					</figcaption>
 				</figure>
 			</div>
+			
 			<div class="text">
 				<p id="paragraph"><span id="comparison1"></span> will be more affordable than <span id="comparison2"></span> for the New Year's celebration.
 				</p>
@@ -60,13 +60,6 @@
 			</div>
 
 		</div>
-			
-
-
-
-
-
-
 	</div>
 	<script type="text/javascript" src="js.js"></script>
 </body>
